Removed the base path from the API resource and added as path in config.
